# fms-model-optimizer

./: .gitignore  .isort.cfg  .pylintrc  .spellcheck-en-custom.txt  .spellcheck.yml  CODEOWNERS  CONTRIBUTING.md  README.md  install_patches.py  pyproject.toml  tox.ini
.github/: pull_request_template.md
.github/workflows/: coverage.yml  format.yml  labelpr.yaml  lint.yml  pypi.yml  spellcheck.yml  test.yml
docs/: fms_mo_design.md
examples/: kfto-kueue-fms-model-optimizer.yaml
examples/AIU_CONVERSION/: README.md
examples/DQ_SQ/: README.md
examples/FP8_QUANT/: README.md
examples/GPTQ/: README.md
examples/MX/: README.md  ffn_tmp.py  simple_mx_example.py
examples/PTQ_INT8/: README.md  run_qa_no_trainer_ptq.py
examples/QAT_INT8/: README.md  run_qa_no_trainer_qat.py  utils_qa.py
fms_mo/: __init__.py  calib.py  dq.py  prep.py  run_quant.py  training_args.py  version.py
fms_mo/aiu_addons/: __init__.py
fms_mo/aiu_addons/fp8/: fp8_adapter.py  fp8_aiu_bmm.py  fp8_aiu_op.py  fp8_attn.py  fp8_linear.py  fp8_spyre_op.py  fp8_utils.py
fms_mo/aiu_addons/gptq/: gptq_aiu_adapter.py  gptq_aiu_linear.py  gptq_aiu_op.py
fms_mo/aiu_addons/i8i8/: i8i8_aiu_adapter.py  i8i8_aiu_linear.py  i8i8_aiu_op.py
fms_mo/aiu_addons/int8/: int8_aiu_linear.py
fms_mo/custom_ext_kernels/: cutlass_i8i32gemm.cpp  cutlass_i8i32gemm.cu  ext_kernel_cublas.cpp  triton_kernels.py  utils.py
fms_mo/fx/: __init__.py  dynamo_utils.py  utils.py
fms_mo/modules/: __init__.py  bmm.py  conv.py  linear.py  lstm.py
fms_mo/quant/: README.md  ptq.py  quantizers.py
fms_mo/quant_refactor/: base_channel.py  base_model.py  base_quant.py  base_tensor.py  get_quantizer_new.py  get_quantizer_rc.py  linear_utils.py  lsq_new.py  lsq_rc.py  pact2_new.py  pact2_rc.py  pact2sym_new.py  pact2sym_rc.py  pact_new.py  pact_rc.py  pactplussym_new.py  pactplussym_rc.py  per_channel_ste.py  per_tensor_ste.py  qmax_new.py  qmax_rc.py  quantizers_new.py  sawb_new.py  sawb_rc.py  sawb_utils.py  torch_quantizer.py
fms_mo/recipes/: dq.json  ptq_int8.json  qat_int8.json
fms_mo/utils/: README.md  __init__.py  aiu_utils.py  calib_data.py  config_utils.py  custom_gptq_models.py  dq_utils.py  error_logging.py  eval_utils.py  import_utils.py  logging_utils.py  qconfig_utils.py  torchscript_utils.py  utils.py
patches/: README.md  microxcaling.patch
tests/: test_run_quant.py
tests/aiu_addons/: conftest.py  test_fp8_addon.py  test_gptq_addon.py  test_int8_addon.py
tests/artifacts/aiu_addons/: ref_w-per_channel_a-per_tensor_asymm_sq-N.pt  ref_w-per_channel_a-per_tensor_symm_sq-N.pt  ref_w-per_channel_a-per_token_sq-N.pt  ref_w-per_tensor_a-per_tensor_asymm_sq-N.pt  ref_w-per_tensor_a-per_tensor_symm_sq-N.pt  ref_w-per_tensor_a-per_token_sq-N.pt
tests/artifacts/configs/: dummy_job_config.json
tests/artifacts/testdata/: __init__.py  malformed_data.json
tests/artifacts/testdata/wiki_maykeye_tinyllama_v0_numsamp2_seqlen2048/: data-00000-of-00001.arrow  state.json
tests/models/: conftest.py  test_checkconfig.py  test_model_utils.py  test_mx.py  test_qmodelprep.py  test_save_aiu.py  test_saveconfig.py  test_toymodels.py
tests/quantizers/: conftest.py  test_get_activation.py  test_get_weight.py  test_lsq.py  test_lsqplus.py  test_pact.py  test_pact2.py  test_pact2sym.py  test_pactplussym.py  test_qmax.py  test_quantizer_utils.py  test_sawb.py
tests/triton_kernels/: test_triton_mm.py
tutorials/: quantization_tutorial.ipynb
