[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0"]

[project]
name = "fms_mo"
description = "Quantization Techniques"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9,<3.12"
classifiers=[
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]
dependencies = [
"torch >=2.1, <2.5",
"numpy",
"tqdm",
"tensorboard",
"notebook",
"torchvision>=0.8",
"transformers",
"accelerate",
"evaluate",
"datasets",
"huggingface_hub",
"pandas",
"safetensors",
"ninja",
]

[project.optional-dependencies]
dev = ["pre-commit>=3.0.4,<5.0"]
fp8 = ["llmcompressor"]
gptq = ["auto_gptq"]
visualize = ["matplotlib", "graphviz", "pygraphviz"]

[tool.setuptools_scm]
version_file = "fms_mo/_version.py"
# do not include +gREV local version, required for Test PyPI upload
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
where = [""]
include = ["fms_mo", "fms_mo*"]

[project.urls]
homepage = "https://github.com/foundation-model-stack/fms-model-optimizer"
source = "https://github.com/foundation-model-stack/fms-model-optimizer"
issues = "https://github.com/foundation-model-stack/fms-model-optimizer/issues"
